--- a/Documentazione/presentazione.html
+++ b/Documentazione/presentazione.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head><meta charset="utf-8" />
-<title>Progetto_info_presentazione</title>
+<title>presentazione</title>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
@@ -293,7 +293,7 @@ Lo scopo principale è quello di evitare molti incidenti e poter salvare molte v
 <div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="n">stato_occhi</span> <span class="o">=</span> <span class="p">{</span><span class="s1">&#39;rilevamenti&#39;</span><span class="p">:</span> <span class="p">[</span><span class="mi">2</span><span class="p">]</span><span class="o">*</span><span class="n">misurazioni</span><span class="p">,</span> <span class="s1">&#39;occhi_chiusi&#39;</span><span class="p">:</span> <span class="kc">False</span><span class="p">}</span> 
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">stato_occhi</span> <span class="o">=</span> <span class="p">{</span><span class="s1">&#39;rilevamenti&#39;</span><span class="p">:</span> <span class="p">[</span><span class="mi">2</span><span class="p">]</span><span class="o">*</span><span class="n">MISURAZIONI</span><span class="p">,</span> <span class="s1">&#39;occhi_chiusi&#39;</span><span class="p">:</span> <span class="kc">False</span><span class="p">}</span> 
 </pre></div>
 
 </div>
@@ -646,29 +646,6 @@ Lo scopo principale è quello di evitare molti incidenti e poter salvare molte v
 <span class="n">looper2</span><span class="o">.</span><span class="n">queue</span><span class="p">(</span><span class="n">sound2</span><span class="p">)</span>
 <span class="n">avviso2</span> <span class="o">=</span> <span class="n">pyglet</span><span class="o">.</span><span class="n">media</span><span class="o">.</span><span class="n">Player</span><span class="p">()</span>
 <span class="n">avviso2</span><span class="o">.</span><span class="n">queue</span><span class="p">(</span><span class="n">looper2</span><span class="p">)</span>
-</pre></div>
-
-</div>
-</div>
-</div>
-
-</div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
-</div>
-<div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<p>Viene definita la variabile booleana <strong>distrazione</strong> e assegnato il valore <em>False</em> all'inizio.</p>
-
-</div>
-</div>
-</div>
-<div class="cell border-box-sizing code_cell rendered">
-<div class="input">
-<div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
-<div class="inner_cell">
-    <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="n">distrazione</span> <span class="o">=</span> <span class="kc">False</span>
 </pre></div>
 
 </div>
